--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorViolet"
     tools:context=".ui.MovieDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,13 +40,14 @@
             android:lineSpacingExtra="8dp"
             android:id="@+id/txvDetailMovieTitle"
             android:layout_width="0dp"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            android:textColor="#FFFFFF"
-            android:text="Title"
+            android:textColor="@color/colorWhile"
+            android:text=""
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgSmalPoster"
             app:layout_constraintTop_toBottomOf="@+id/detailMovieCover" />
@@ -70,8 +71,8 @@
             android:layout_marginEnd="16dp"
             android:lineSpacingExtra="8dp"
             android:text=""
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
+            android:textColor="@color/colorWhile"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/imgSmalPoster"
             app:layout_constraintTop_toBottomOf="@+id/txvDetailMovieTitle" />
