--- a/app/src/main/res/layout/slide_item.xml
+++ b/app/src/main/res/layout/slide_item.xml
@@ -43,9 +43,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
-        android:text="TextView"
+        android:text=""
         android:textSize="24sp"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorWhile"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="@+id/imageView3" />
