--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -7,10 +7,11 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackgroundBorderless">
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:layout_marginBottom="11dp">
 
     <ImageView
-        android:id="@+id/imgItemMovie"
+        android:id="@+id/imgMoviePopular"
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:scaleType="centerCrop"
@@ -19,26 +20,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txvItemMovieTitle"
+        android:id="@+id/txvMovieTitlePopular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text=""
+        android:layout_marginTop="2dp"
+        android:text="title"
         android:textColor="@color/colorBlack"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgItemMovie" />
+        app:layout_constraintTop_toBottomOf="@+id/imgMoviePopular" />
 
     <TextView
-        android:id="@+id/txvDate"
+        android:id="@+id/txvDatePopular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text=""
+        android:text="date"
         android:textColor="@color/colorBlack"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgItemMovie" />
+        app:layout_constraintTop_toTopOf="@+id/txvMovieTitlePopular" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
