--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:text="Upcoming"
+            android:text="@string/upcoming"
             android:textStyle="bold"
             android:textColor="@color/colorRed"
             android:textSize="23sp"
