--- a/app/src/main/res/layout/activity_movie_detail_popular.xml
+++ b/app/src/main/res/layout/activity_movie_detail_popular.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorViolet"
-    tools:context=".ui.MoviesDetailActivity">
+    tools:context=".ui.MoviesDetailPopularActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -68,12 +68,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="16dp"
             android:lineSpacingExtra="8dp"
             android:text=""
             android:textColor="@color/colorWhile"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/txvDetailMovieTitle"
             app:layout_constraintStart_toStartOf="@+id/imgSmalPoster"
             app:layout_constraintTop_toBottomOf="@+id/txvDetailMovieTitle" />
 
