--- a/app/src/main/res/layout/item_movie_upcoming.xml
+++ b/app/src/main/res/layout/item_movie_upcoming.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imgMovieUpComing"
+        android:id="@+id/imgItemMovieUpComing"
         android:layout_width="match_parent"
         android:layout_height="260dp"
         android:scaleType="centerCrop"
@@ -16,36 +16,36 @@
         tools:ignore="MissingConstraints"/>
 
     <TextView
-        android:id="@+id/txvTitleUpComing"
+        android:id="@+id/txvItemTitleUpComing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="38dp"
-        android:text="Title"
+        android:text=""
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@color/colorWhile"
-        app:layout_constraintBottom_toBottomOf="@+id/imgMovieUpComing"
+        app:layout_constraintBottom_toBottomOf="@+id/imgItemMovieUpComing"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/txvDateUpComing"
+        android:id="@+id/txvItemDateUpComing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
-        android:text="Date"
+        android:text=""
         android:textColor="@color/colorWhile"
-        app:layout_constraintBottom_toBottomOf="@+id/imgMovieUpComing"
+        app:layout_constraintBottom_toBottomOf="@+id/imgItemMovieUpComing"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgMovieUpComing"
+        app:layout_constraintBottom_toBottomOf="@+id/imgItemMovieUpComing"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/imgMovieUpComing"
+        app:layout_constraintStart_toStartOf="@+id/imgItemMovieUpComing"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bg_gradient" />
 </androidx.constraintlayout.widget.ConstraintLayout>
