--- a/app/src/main/res/layout/activity_movie_detail_popular.xml
+++ b/app/src/main/res/layout/activity_movie_detail_popular.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorViolet"
-    tools:context=".ui.MoviesDetailPopularActivity">
+    tools:context=".ui.movies.MoviesDetailPopularActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
