--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/slidePage"
-            android:layout_width="match_parent"
-            android:layout_height="275dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </androidx.viewpager.widget.ViewPager>-->
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewUpComing"
             android:layout_width="match_parent"
@@ -68,12 +58,10 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
             android:text="@string/upcoming"
-            android:textStyle="bold"
             android:textColor="@color/colorRed"
             android:textSize="23sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,6 +82,42 @@
             app:layout_constraintStart_toStartOf="@+id/recyclerViewUpComing"
             app:layout_constraintTop_toTopOf="@+id/imgRight"
             app:srcCompat="@drawable/ic_left" />
+
+        <ImageView
+            android:id="@+id/imgSelectPhoto"
+            android:layout_width="63dp"
+            android:layout_height="62dp"
+            android:layout_marginStart="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerViewUpComing"
+            app:srcCompat="@drawable/ic_launcher_background" />
+
+<!--
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar2"
+            android:layout_width="409dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imgMenu"
+                    android:src="@drawable/menu"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/colorViolet"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"/>
+
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+-->
 
 
         <!--        <TextView
