--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -7,17 +7,20 @@
     android:padding="20dp"
     android:id="@+id/header">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgUser"
-        android:src="@drawable/angry5"
+        android:src="@drawable/profile"
         android:layout_width="75dp"
         android:layout_height="75dp"/>
 
     <TextView
         android:id="@+id/txvEmailUser"
-        android:text="Email"
+        android:text=""
+        android:textSize="18sp"
+        android:textColor="@color/colorViolet"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
+        android:layout_marginLeft="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
