--- a/app/src/main/res/layout/activity_movie_detail_popular.xml
+++ b/app/src/main/res/layout/activity_movie_detail_popular.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/txvVote"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorViolet"
@@ -10,7 +11,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
 
         <ImageView
@@ -37,17 +37,17 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <TextView
-            android:lineSpacingExtra="8dp"
             android:id="@+id/txvDetailMovieTitle"
             android:layout_width="0dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/colorWhile"
+            android:lineSpacingExtra="8dp"
             android:text=""
+            android:textColor="@color/colorWhile"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgSmalPoster"
             app:layout_constraintTop_toBottomOf="@+id/detailMovieCover" />
@@ -67,26 +67,37 @@
             android:id="@+id/txvDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="24dp"
             android:lineSpacingExtra="8dp"
             android:text=""
             android:textColor="@color/colorWhile"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/txvDetailMovieTitle"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/imgSmalPoster"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/colorWhile"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/txvDetailMovieTitle"
             app:layout_constraintTop_toBottomOf="@+id/txvDetailMovieTitle" />
 
-<!--        <ImageView
-            android:id="@+id/imgPlay"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_play_arrow_black_24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imgPosterDetail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/imgPosterDetail"
-            app:layout_constraintTop_toTopOf="@+id/imgPosterDetail" />-->
+        <!--        <ImageView
+                    android:id="@+id/imgPlay"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_play_arrow_black_24dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imgPosterDetail"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/imgPosterDetail"
+                    app:layout_constraintTop_toTopOf="@+id/imgPosterDetail" />-->
 
-<!--        <TextView
+        <!--        <TextView
             android:id="@+id/textView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
