--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -84,6 +84,16 @@
             app:layout_constraintTop_toTopOf="@+id/imgRight"
             app:srcCompat="@drawable/ic_left" />
 
+        <Button
+            android:id="@+id/btnLoadMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Load more"
+            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
+            app:layout_constraintStart_toStartOf="@+id/recyclerView"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
         <!--
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar2"
