--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -39,7 +39,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/popular"
-            android:textColor="@color/colorRed"
+            android:textColor="@color/colorWhile"
             android:textSize="23sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/recyclerViewUpComing"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/upcoming"
-            android:textColor="@color/colorRed"
+            android:textColor="@color/colorWhile"
             android:textSize="23sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Load more"
+            android:textColor="@color/colorWhile"
             app:layout_constraintEnd_toEndOf="@+id/recyclerView"
             app:layout_constraintStart_toStartOf="@+id/recyclerView"
             app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
