--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorViolet">#8E57EC</color>
     <color name="colorRed">#E91E1E</color>
     <color name="colorgray">#B4B2B2</color>
+    <color name="colorBackgroundMain">#26262d</color>
 
 </resources>
