--- a/app/src/main/res/layout/item_movie_popular.xml
+++ b/app/src/main/res/layout/item_movie_popular.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:text=""
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhile"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgMoviePopular" />
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text=""
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txvMovieTitlePopular" />
 
